--- a/TinDog-Start-master/css/styles.css
+++ b/TinDog-Start-master/css/styles.css
@@ -1,146 +1,178 @@
-body{
+body {
   font-family: "Montserrat";
+  text-align: center;
 }
 
-#title{
-  background-color: #ff4c68;
-  color: #fff;
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Montserrat-Bold";
 }
 
-h1{
-  font-family: "Montserrat";
+p {
+  color: #8f8f8f;
+}
+
+/* Headings */
+
+.big-heading {
+  font-family: "Montserrat-Black";
   font-size: 3.5rem;
   line-height: 1.5;
 }
 
-h2{
-  font-family: "Montserrat";
+.section-heading {
   font-size: 3rem;
   line-height: 1.5;
 }
 
+/* Containers */
+
 .container-fluid{
-  padding: 3% 15% 11%;
+  padding: 7% 15%;
 }
 
-.navbar{
-  padding-bottom: 4.5rem;
+/* Sections */
+
+.colored-section {
+  background-color: #ff4c68;
+  color: #fff;
 }
 
-.navbar-brand{
+.white-section {
+  background-color: #fff;
+}
+
+/* Navigation Bar */
+
+.navbar {
+  padding: 0 0 4.5rem;
+}
+
+.navbar-brand {
   font-family: "Ubuntu";
   font-size: 2.5rem;
   font-weight: bold;
 }
 
-.nav-item{
+.nav-item {
   padding: 0 18px;
 }
 
-.nav-link{
+.nav-link {
   font-size: 1.2rem;
-  font-family: "Montserrat-light";
+  font-family: "Montserrat-Light";
 }
 
-.download-button{
+/* Buttons */
+
+.download-button {
   margin: 5% 3% 5% 0;
 }
 
-.title-image{
+/* Title Section */
+
+#title {
+  background-color: #ff4c68;
+  color: #fff;
+  text-align: left;
+}
+
+#title .container-fluid {
+  padding: 3% 15% 7%;
+}
+
+/* Title Image */
+
+.title-image {
   width: 60%;
   transform: rotate(25deg);
   position: absolute;
   right: 30%;
 }
 
-h3{
-  font-family: "Montserrat";
-}
+/* Features Section */
 
-p{
-  color: #8f8f8f;
-}
-
-#features{
-
-  padding: 7% 15%;
-  background-color: #fff;
+#features {
   position: relative;
 }
 
-.feature-box{
-  text-align: center;
-  padding: 5%;
+.feature-title {
+  font-size: 1.5rem;
 }
 
-.icon{
+.feature-box {
+  padding: 4.5%;
+}
+
+.icon {
   color: #ef8172;
   margin-bottom: 1rem;
-
 }
 
-.icon:hover{
+.icon:hover {
   color: #ff4c68;
 }
 
+/* Testimonial Section */
 
-#testimonials{
-
-  text-align: center;
+#testimonials {
   background-color: #ef8172;
-  color: #fff;
 }
 
-.testimonial-image{
+.testimonial-text {
+  font-size: 3rem;
+  line-height: 1.5;
+}
+
+.testimonial-image {
   width: 10%;
   border-radius: 100%;
   margin: 20px;
 }
 
-.carousel-item{
-  padding: 7% 15%;
-}
 
-#press{
+#press {
   background-color: #ef8172;
-  text-align: center;
   padding-bottom: 3%;
 }
 
-.press-logo{
+.press-logo {
   width: 15%;
   margin: 20px 20px 50px;
 }
 
-#pricing{
+/* Pricing Section */
+
+#pricing {
   padding: 100px;
-  text-align: center;
 }
 
-.pricing-coloumn{
-  padding: 3% 2%;
-}
-
-#cta{
-  text-align: center;
-  background-color: #ff4c68;
-  color: #fff;
-  padding: 7% 15%;
-}
-
-
-.foot-h{
-  font-family: "Montserrat";
-  font-size: 3.5rem;
+.price-text {
+  font-size: 3rem;
   line-height: 1.5;
 }
 
-#footer{
-  text-align: center;
-  padding: 7% 15%;
+.pricing-column {
+  padding: 3% 2%;
 }
 
-.social-icon{
+/* CTA Section */
+
+
+/* Footer Section */
+
+
+.social-icon {
   margin: 20px 10px;
-  color: black;
+}
+
+@media (max-width: 1028px) {
+
+  #title {
+    text-align: center;
+  }
+
+  .title-image {
+    position: static;
+    transform: rotate(0);
+  }
 }
